--- a/estilo.css
+++ b/estilo.css
@@ -211,3 +211,55 @@ body {
 .foto:hover {
     transform: scale(1.05);
 }
+
+.galeria {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.galeria img {
+    width: 100%;
+    max-width: 200px; /* Limita o tamanho das miniaturas */
+    height: auto;
+    border-radius: 10px;
+    cursor: pointer; /* O cursor ficará como 'pointer' quando passar por cima */
+    transition: transform 0.3s ease; /* Efeito suave no zoom */
+}
+
+.galeria img:hover {
+    transform: scale(1.1); /* Aumenta um pouco a foto quando o usuário passar o mouse por cima */
+}
+
+/* Estilo para o modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
